--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
@@ -25,6 +26,10 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
+    "@types/next": "^8.0.6",
+    "@types/node": "^12.7.11",
+    "@types/react": "^16.9.5",
+    "@types/react-no-ssr": "^1.1.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.5.0",
     "eslint-config-vacuumlabs": "^1.8.2",
