--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "next-offline": "^4.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-no-ssr": "^1.1.0",
-    "workbox-sw": "^4.3.1",
-    "workbox-webpack-plugin": "^4.3.1"
+    "react-no-ssr": "^1.1.0"
   },
   "devDependencies": {
     "@types/next": "^8.0.6",
@@ -36,6 +34,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.1.1",
-    "prettier-eslint": "^9.0.0"
+    "prettier-eslint": "^9.0.0",
+    "workbox-webpack-plugin": "^4.3.1"
   }
 }
